# pydupes

./: .gitignore  LICENSE  README.md  pydupes.py  pyproject.toml  pytest.ini  tests.py
.github/workflows/: codeql-analysis.yml  python-package.yml
