[tool.poetry]
name = "pydupes"
version = "0.0.0"
description = "Yet another duplicate file finder that may be faster in environments with millions of files and terabytes of data or over high latency filesystems."
authors = ["Erik Reed <erik.reed@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
click = "^7"
tqdm = "^4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pydupes = 'pydupes:main'

