[tool.poetry]
name = "pydupes"
version = "0.6.0"
description = "A duplicate file finder that may be faster in environments with millions of files and terabytes of data."
authors = ["Erik Reed <erik.reed@pm.me>"]
license = "MIT"
readme = "README.md"
keywords = ['deduplication', 'files', 'duplicate']
homepage = "https://github.com/erikreed/pydupes"
repository = "https://github.com/erikreed/pydupes"

[tool.poetry.dependencies]
python = "^3.5"
click = "^8;^7"
tqdm = "^4"

[tool.poetry.dev-dependencies]
flake8 = { version = "^4", python = "^3.6" }
pytest = { version = "^6", python = "^3.6" }
pytest-cov = { version = "^3", python = "^3.6" }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pydupes = 'pydupes:main'

